<resources>
    <string name="app_name">طوارئ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help">مساعدة</string>
    <string name="user_profile">الملف الشخصي</string>
    <string name="history">السجلات</string>
    <string name="login">تسجيل دخول</string>
    <string name="sign_up">تسجيل حساب</string>
    <string name="slogan_tv">نرتقي بمساعدة الاخرين . . .</string>
    <string name="ssn">رقم الهوية</string>
    <string name="date_of_birth">تاريخ الميلاد</string>
    <string name="firefighter">دفاع مدني</string>
    <string name="blood_type">فصيلة الدم</string>
    <string name="phone_close_person">رقم شخص مقرب</string>
    <string name="signup">تسجيل</string>
    <string name="phone">رقم الهاتف</string>
    <string name="paramedic">مسعف</string>
    <string name="user">مستخدم</string>
    <string name="medical_history">السجل الطبي</string>
    <string name="medical_status">الحالة الطبية</string>
    <string name="ambulance">اسعاف</string>
    <string name="civil_defense">دفاع مدني</string>
    <string name="request_description">وصف الطلب . . .</string>
    <string name="diabetic">مريض سكر</string>
    <string name="heart_patient">مريض قلب</string>
    <string name="pressure_patient">مريض ضغط</string>
    <string name="gender">الجنس</string>
    <string name="save">حفظ</string>
    <string name="height">CM الطول</string>
    <string name="weight"> KG الوزن</string>
    <string name="request_type">نوع الطلب</string>
    <string name="full_name">الاسم بالكامل</string>

    <string name="no_data">لا يوجد طلبات</string>
    <string name="search">بحث</string>
    <string name="sign_out">تسجيل خروج</string>
    <string name="hint_phone">5xxxxxxxx</string>
    <string name="name">الاسم:</string>

    <string-array name="gender">
        <item> ذكر </item>
        <item> انثى </item>
    </string-array>

    <string-array name="blood_type">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

</resources>