<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav"
    app:startDestination="@id/helpFragment">
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.afares.emergency.ui.fragments.profile.ProfileFragment"
        android:label="@string/user_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_mainActivity"
            app:destination="@id/mainActivity" />
    </fragment>
    <fragment
        android:id="@+id/helpFragment"
        android:name="com.afares.emergency.ui.fragments.help.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" >
        <action
            android:id="@+id/action_helpFragment_to_medicalHistoryFragment"
            app:destination="@id/medicalHistoryFragment" />
        <action
            android:id="@+id/action_helpFragment_to_historyFragment"
            app:destination="@id/historyFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.afares.emergency.ui.fragments.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/medicalHistoryFragment"
        android:name="com.afares.emergency.ui.fragments.medical.MedicalHistoryFragment"
        android:label="@string/medical_history"
        tools:layout="@layout/fragment_medical_history" >
        <action
            android:id="@+id/action_medicalHistoryFragment_to_helpFragment"
            app:destination="@id/helpFragment"
            app:popUpTo="@id/medicalHistoryFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <activity
        android:id="@+id/mainActivity"
        android:name="com.afares.emergency.ui.activity.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />
</navigation>