<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray"
        android:padding="24dp"
        android:scrollIndicators="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/medical_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/nahdi"
                android:text="@string/medical_status"
                android:textColor="@color/sky_blue_700"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/diabetic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:background="?android:selectableItemBackground"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:fontFamily="@font/nahdi"
                android:text="@string/diabetic"
                android:textColor="@color/darkGray"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/medical_status" />

            <CheckBox
                android:id="@+id/pressure_patient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="4dp"
                android:background="?android:selectableItemBackground"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:fontFamily="@font/nahdi"
                android:text="@string/pressure_patient"
                android:textColor="@color/darkGray"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/diabetic"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/diabetic"
                app:layout_constraintTop_toBottomOf="@+id/diabetic" />

            <CheckBox
                android:id="@+id/heart_patient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:background="?android:selectableItemBackground"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:fontFamily="@font/nahdi"
                android:text="@string/heart_patient"
                android:textColor="@color/darkGray"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/pressure_patient"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/pressure_patient"
                app:layout_constraintTop_toBottomOf="@+id/pressure_patient" />

            <TextView
                android:id="@+id/blood_type_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/nahdi"
                android:text="@string/blood_type"
                android:textColor="@color/sky_blue_700"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heart_patient" />

            <Spinner
                android:id="@+id/blood_type_spinner"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_input"
                android:entries="@array/blood_type"
                android:fontFamily="@font/nahdi"
                android:gravity="end|center"
                android:paddingHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/Gender_spinner"
                app:layout_constraintTop_toBottomOf="@+id/blood_type_tv" />

            <TextView
                android:id="@+id/Gender_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/nahdi"
                android:text="@string/gender"
                android:textColor="@color/sky_blue_700"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/blood_type_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heart_patient" />

            <Spinner
                android:id="@+id/Gender_spinner"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_input"
                android:entries="@array/gender"
                android:fontFamily="@font/nahdi"
                android:gravity="end|center"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="@+id/Gender_tv"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Gender_tv" />

            <EditText
                android:id="@+id/height_et"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:fontFamily="@font/nahdi"
                android:gravity="end|center"
                android:hint="@string/height"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/weight_et"
                app:layout_constraintTop_toBottomOf="@+id/blood_type_spinner" />

            <EditText
                android:id="@+id/weight_et"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:fontFamily="@font/nahdi"
                android:gravity="end|center"
                android:hint="@string/weight"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintEnd_toEndOf="@+id/Gender_spinner"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Gender_spinner" />

            <EditText
                android:id="@+id/age_et"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/custom_input"
                android:hint="@string/date_of_birth"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/height_et" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/nahdi"
                android:text="@string/save"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/age_et" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>