<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray"
        tools:context=".fragments.login.LoginFragment">


        <Button
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="#00FFFFFF"
            android:fontFamily="@font/katibeh"
            android:text="@string/sign_up"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_icon"
            app:layout_constraintVertical_bias="0.94" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="@font/katibeh"
            android:padding="8dp"
            android:text="@string/login"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/signup_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.547"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slogan_help"
            app:layout_constraintVertical_bias="0.88" />

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_help"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.29000002"
            app:tint="@color/purple_200" />

        <TextView
            android:id="@+id/slogan_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/katibeh"
            android:text="@string/slogan_tv"
            android:textColor="@color/purple_700"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>