<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:id="@+id/helpFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            tools:context=".fragments.help.HelpFragment">


            <TextView
                android:id="@+id/order_type_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/katibeh"
                android:layoutDirection="rtl"
                android:text="@string/request_type"
                android:textColor="@color/purple_500"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.110000014" />

            <RadioGroup
                android:id="@+id/request_type_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:button="@null"
                android:gravity="end"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/order_type_tv"
                app:layout_constraintVertical_bias="0.0">

                <RadioButton
                    android:id="@+id/civil_defense_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="?android:selectableItemBackground"
                    android:button="@null"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:fontFamily="@font/katibeh"
                    android:layoutDirection="rtl"
                    android:text="@string/civil_defense"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/ambulance_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="?android:selectableItemBackground"
                    android:button="@null"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:fontFamily="@font/katibeh"
                    android:layoutDirection="rtl"
                    android:text="@string/ambulance"
                    android:textSize="20sp" />

            </RadioGroup>

            <EditText
                android:id="@+id/request_description_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_input_request"
                android:ems="10"
                android:fontFamily="@font/katibeh"
                android:gravity="start|top"
                android:hint="@string/request_description"
                android:inputType="textMultiLine"
                android:paddingStart="24dp"
                android:paddingTop="16dp"
                android:paddingEnd="24dp"
                android:textColorHint="@color/purple_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/request_type_rg" />

            <Button
                android:id="@+id/order_btn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/katibeh"
                android:paddingHorizontal="50dp"
                android:text="اطلب"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/request_description_et"
                app:layout_constraintVertical_bias="0.22000003" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>