<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_help"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.100000024"
                app:layout_scrollFlags="scroll|enterAlways"
                app:tint="@color/purple_200" />

            <TextView
                android:id="@+id/app_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lemonada_semibold"
                android:text="@string/app_name"
                android:textColor="@color/purple_700"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_icon"
                app:layout_scrollFlags="scroll|exitUntilCollapsed" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/user_type_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:padding="24dp"
                android:paddingHorizontal="40dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_name_tv"
                app:layout_constraintVertical_bias="0.0">


                <Button
                    android:id="@+id/user_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:drawableEnd="@drawable/ic_user"
                    android:fontFamily="@font/katibeh"
                    android:padding="16dp"
                    android:text="مستخدم"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.333"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/paramedic_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/gray"
                    android:drawableEnd="@drawable/ic_paramedic"
                    android:fontFamily="@font/katibeh"
                    android:padding="16dp"
                    android:text="مسعف"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="@+id/user_btn"
                    app:layout_constraintStart_toStartOf="@+id/user_btn"
                    app:layout_constraintTop_toBottomOf="@+id/user_btn" />

                <Button
                    android:id="@+id/firefighter_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/gray"
                    android:drawableEnd="@drawable/ic_firefighter"
                    android:fontFamily="@font/katibeh"
                    android:padding="16dp"
                    android:text="@string/firefighter"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/paramedic_btn"
                    app:layout_constraintStart_toStartOf="@+id/paramedic_btn"
                    app:layout_constraintTop_toBottomOf="@+id/paramedic_btn"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_name_tv">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/user_info_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/app_name_tv"
                    app:layout_constraintVertical_bias="0.19">


                    <EditText
                        android:id="@+id/personal_phone_et"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/custom_input"
                        android:ems="10"
                        android:fontFamily="@font/katibeh"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/ssn_et"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_input"
                        android:ems="10"
                        android:fontFamily="@font/katibeh"
                        android:hint="@string/ssn"
                        android:inputType="numberDecimal"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/personal_phone_et" />

                    <EditText
                        android:id="@+id/age_et"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_input"
                        android:ems="10"
                        android:fontFamily="@font/katibeh"
                        android:hint="@string/age"
                        android:inputType="numberDecimal"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ssn_et" />

                    <EditText
                        android:id="@+id/blood_type_et"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_input"
                        android:ems="10"
                        android:fontFamily="@font/katibeh"
                        android:hint="@string/blood_type"
                        android:inputType="text"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/age_et" />

                    <EditText
                        android:id="@+id/phone_closePerson_et"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_input"
                        android:ems="10"
                        android:fontFamily="@font/katibeh"
                        android:hint="@string/phone_closeperson"
                        android:inputType="phone"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/blood_type_et" />


                    <Button
                        android:id="@+id/signup_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="8dp"
                        android:backgroundTint="@color/teal_700"
                        android:fontFamily="@font/katibeh"
                        android:padding="8dp"
                        android:text="@string/signup"
                        android:textSize="26sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/phone_closePerson_et"
                        app:layout_constraintVertical_bias="0.57" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>